<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="email">Email</string>
    <string name="glide_radio">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="ok">OK</string>
    <string name="select_radio_button">Please select a radio button and try again.</string>
    <string name="download">Download</string>
    <string name="notification_channel_name">LoadApp-Channel</string>
    <string name="glide">Glide Repo</string>
    <string name="load_app">LoadApp Repo</string>
    <string name="retrofit">Retrofit Repo</string>
</resources>
